# file-collection-hash

./: CHANGELOG.md  README.md  example.py  pyproject.toml
file_collection_hash/: __init__.py  __main__.py  fc_hash.py  version.py
tests/: test_file_collection_hash.py
